attempt fix height discrepency browser address bar attempt: fix css live site https://forum.freecodecamp.org/t/page-jumps-up-and-down-when-scolling-on-mobile/88185/8

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,8 @@ body {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  height: 100vh;
+  max-height: 100vh;
 }
 
 .App {
